# LaTexStudio

./: README.md
.github/workflows/: ci.yml  generate-updater-keys.yml  release.yml
app/: Plan.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/src/: App.tsx  main.tsx
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/resources/: README.md
app/src-tauri/resources/dictionaries/: README.md
app/src-tauri/src/: errors.rs  lib.rs  main.rs  menu.rs  paths.rs  util.rs  watcher.rs
app/src-tauri/src/commands/: fs.rs  index.rs  mod.rs  recents.rs  settings.rs  spellcheck.rs  synctex.rs  tectonic.rs  workspace.rs
app/src/api/: build.ts  dialog.ts  fs.ts  index.ts  invoke.ts  recents.ts  settings.ts  spell.ts  synctex.ts  tectonic.ts  updater.ts  watcher.ts
app/src/components/: AboutDialog.tsx  CommandPalette.tsx  Splitter.tsx  TectonicInstaller.tsx
app/src/components/LogPanel/: LogPanel.tsx
app/src/components/MenuBar/: MenuBar.tsx
app/src/components/PdfViewer/: Viewer.tsx
app/src/components/Sidebar/: Outline.tsx  Tree.tsx
app/src/components/Toast/: ToastHost.tsx
app/src/editor/: EditorToolbar.tsx  LatexEditor.tsx  SnippetPicker.tsx  auto-close.ts  autocomplete.ts  latex-language.ts  latex-theme.ts  latex-vocab.ts  snippets.ts  spellcheck.ts
app/src/state/: build.ts  index.ts  theme.ts  toasts.ts  workspace.ts
app/src/styles/: globals.css
docs/: auto-update-setup.md  index.html
